@@ -1,4 +1,5 @@
  * Improve password font handling. Handle failure to load font gracefully
+ * Work around device bugs with FLAG_SECURE
 
 KeePassDroid (2.0.2)
  * Fix crash on incorrect password (closes: #776)
